2000-08-04  Ruediger Kuhlmann  <uck4@rz.uni-karlsruhe.de>

	* acspecific.m4 (AC_PROG_RANLIB): Use AC_CHECK_TOOL.
	* doc/autoconf.texi (Limitations of Usual Tools): Typos.

2000-08-04  Akim Demaille  <akim@epita.fr>

	Solaris' /usr/ucb/expr, and SunOS' /usr/bin/expr fail with the `:'
	operator when \(\) is used, and matches a string longer than 120
	characters.
	Reported by Geoff Keating.

	* doc/autoconf.texi (Limitations of Usual Tools): Some words about
	this.
	* acgeneral.m4 (_AC_SHELL_DIRNAME): Fall back to echo|sed if expr
	fails.
	From Paul Eggert.

2000-08-04  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4: (AC_RUN_IFELSE, AC_LINK_IFELSE, AC_COMPILE_IFELSE):
	Don't create the source file if none is given, and in this case,
	don't remove it either.

2000-08-04  Akim Demaille  <akim@epita.fr>

	* libm4.m4 (m4_ifvanl): New macro.
	* acgeneral.m4: Use it.

2000-08-02  Akim Demaille  <akim@epita.fr>

	Release Automake from being a substitute to Autoconf.

	* acspecific.m4 (_AC_HEADER_TIOCGWINSZ_IN_TERMIOS_H,
	_AC_HEADER_TIOCGWINSZ_IN_SYS_IOCTL, AC_HEADER_TIOCGWINSZ,
	AC_SYS_POSIX_TERMIOS): New macros from both Automake and the
	fileutils.

2000-08-02  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_PROG_CC_G, _AC_PROG_CXX_G): Recent changes
	inverted the results.  Fix that.

2000-08-02  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Special Shell Variables): More emphasis on
	the dangers of character ranges.
	From Paul Eggert.

2000-08-01  Akim Demaille  <akim@epita.fr>

	* autoheader.sh (_ac_warnings): Be robust to LC_COLLATE.
	`IFS=,; echo ,' will give a comma.  Take this into account.

2000-08-01  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CC): Also try to find $target_alias-cc.

2000-08-01  Akim Demaille  <akim@epita.fr>

	AC_VALIDATE_CACHED_SYSTEM_TUPLE no longer works properly since the
	AC_CANONICAL_* revamping.
	Reported by Peter Eisentraut.
	In fact, let's just use the precious variables handling.
