@@ -1,3 +1,9 @@
+2000-08-07  Akim Demaille  <akim@epita.fr>
+
+	* acgeneral.m4 (AC_MSG_NOTICE): New macro, suggested by Pavel
+	Roskin.
+	(AC_MSG_ERROR): Use it.
+
 2000-08-04  Ruediger Kuhlmann  <uck4@rz.uni-karlsruhe.de>
 
 	* acspecific.m4 (AC_PROG_RANLIB): Use AC_CHECK_TOOL.
